--- a/test.css
+++ b/test.css
@@ -36,7 +36,7 @@ li {
 	position: relative;
 }
 .header-wrap ul li .menu {
-	display:none;
+	opacity: 0;
 	position: absolute;
 	top:50px;
 	left:0;
@@ -47,7 +47,14 @@ li {
 	font-size:14px;
 	box-shadow: 0 0 10px #666;
 	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;;
+	border-bottom-right-radius: 4px;
+	transition:.8s;
+	transform: translateY(10px);
+}
+.header-wrap ul li .menu.move {
+	opacity: 1;
+	transition:.8s;
+	transform: translateY(0);
 }
 .header-wrap ul li .menu div {
 	height:40px;
@@ -94,3 +101,4 @@ li {
 	line-height:80px;
 	color:#fff;
 }
+
